Extract response validation